fix line divider spacing for resume layout

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2055,7 +2055,7 @@ html.dark .profile-img:hover {
   font-family: 'Nanum Pen Script', "Noto Emoji", Courier;
 }
 
-.main-subheader + * > hr {
+.resume .main-subheader + section > hr:first-of-type {
   margin-top: 0;
 }
 
